<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:background="@drawable/bkg_lay_dial"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:padding="10dp">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/surr_title"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#FF000000"
		android:gravity="center"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/surr_body"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_margin="20dp"
		android:gravity="center"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/dial_surrButtonNo"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/grow_cancel"
			android:layout_margin="10dp"
			android:background="@drawable/btn_bkg_grey"/>

		<Button
			android:id="@+id/dial_surrButtonYes"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/surr_btnyes"
			android:layout_margin="10dp"
			android:background="@drawable/btn_bkg_red"/>

	</LinearLayout>

</LinearLayout>

